tests/baselines/reference/bigint-numeric-separator-literal-nzd-nsl-dds-leading-zero-err.errors.txt
bigint-numeric-separator-literal-nzd-nsl-dds-leading-zero-err.ts(36,2): error TS6188: Numeric separators are not allowed here.


==== bigint-numeric-separator-literal-nzd-nsl-dds-leading-zero-err.ts (1 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: NonZeroDigit NumericLiteralSeparator DecimalDigits
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
        NumericLiteralBase BigIntLiteralSuffix
    
      NumericLiteralBase ::
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      BigIntLiteralSuffix :: n
    
      NumericLiteralSeparator ::
        _
    
      DecimalIntegerLiteral ::
        ...
        NonZeroDigit NumericLiteralSeparator DecimalDigits
    
      NonZeroDigit :: one of
        1 2 3 4 5 6 7 8 9
    
    negative:
      phase: parse
      type: SyntaxError
    features: [BigInt, numeric-separator-literal]
    ---*/
    
    
    0_0123456789n;
     ~
!!! error TS6188: Numeric separators are not allowed here.
    